--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input,
+textarea,
+select {
+  @apply border border-gray-200 rounded-md w-full py-2 px-3;
+  @apply mb-2;
+}
+input:focus,
+textarea:focus,
+select:focus {
+  @apply border-blue-900;
+}
+h1 {
+  @apply text-blue-900 mb-4 text-xl;
+}
+label {
+  @apply text-gray-600 text-sm;
+}
+.btn-primary {
+  @apply bg-yellow-500 mt-3 text-white px-4 py-1 rounded-md shadow-sm;
+}
